# water-credits-contracts

./: CHANGELOG.md  CONTRIBUTING.md  PLAN.md  README.md  SECURITY.md
contracts/credit_token/src/: lib.rs
contracts/governance/src/: lib.rs
contracts/verification_oracle/src/: lib.rs
doc/: SPEC.md
tests/: Cargo.toml
tests/tests/: credit_lifecycle.rs  emergency_pause.rs  project_id_compat.rs
