[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[features]
testutils = [
    "soroban-sdk/testutils",
    "credit_token/testutils",
    "credit_factory/testutils",
    "verification_oracle/testutils",
    "retirement_registry/testutils",
    "project_registry/testutils",
    "governance/testutils",
]

[dependencies]
credit_token = { path = "../contracts/credit_token", features = ["testutils"] }
credit_factory = { path = "../contracts/credit_factory", features = ["testutils"] }
verification_oracle = { path = "../contracts/verification_oracle", features = ["testutils"] }
retirement_registry = { path = "../contracts/retirement_registry", features = ["testutils"] }
project_registry = { path = "../contracts/project_registry", features = ["testutils"] }
governance = { path = "../contracts/governance", features = ["testutils"] }
shared = { path = "../contracts/shared" }
soroban-sdk = { version = "20.0.0", features = ["testutils"] }

[lib]
doctest = false

[lints.rust]
unexpected_cfgs = "allow"
